説明文を追加

--- a/test.ipynb
+++ b/test.ipynb
@@ -99,11 +99,11 @@
     }
    ],
    "source": [
-    "data = hed2array(path, 0, 1)\n",
-    "peak_index = detect_peak_neg(data)\n",
-    "popts, r2s = remove_fit_data(data, peak_index, 450)\n",
-    "draw_2d(popts, 450, 100)\n",
-    "draw_3d(popts, 450, 100)"
+    "data = hed2array(path, 0, 1) # 計測データの読み込み\n",
+    "peak_index = detect_peak_neg(data) # 64電極すべてのピーク抽出\n",
+    "popts, r2s = remove_fit_data(data, peak_index, 450) # 正しくピークを検出できなかったchを除外して3次関数にフィットする\n",
+    "draw_2d(popts, 450, 100) # 二次元カラーマップを描画\n",
+    "draw_3d(popts, 450, 100) # 三次元カラーマップを描画"
    ]
   },
   {
